# llm-cogs-optmizer

./: CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
examples/: basic_usage.py
src/core/: analyzer.py  cost_tracker.py  router.py
src/providers/: base.py  cloud.py  local.py
src/utils/: config.py
